--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/lichkin-web.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/lichkin-web.css
@@ -1,1 +1,15 @@
 @charset "UTF-8";
+
+html {
+  padding: 0px;
+  margin: 0px;
+}
+
+body {
+  padding: 0px;
+  margin: 0px;
+}
+
+textarea {
+  resize: none;
+}
