--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/lichkin-web.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/lichkin-web.css
@@ -1,15 +1,33 @@
 @charset "UTF-8";
-
-html {
-  padding: 0px;
-  margin: 0px;
+:root {
+    --lichkin-body-background-color: #e0e0e0;
+    --lichkin-inputs-background-color: #ffffff;
+    --lichkin-inputs-padding: 3px 8px 3px 8px;
 }
 
-body {
-  padding: 0px;
-  margin: 0px;
+.lichkin-body {
+    background-color: var(--lichkin-body-background-color);
 }
 
-textarea {
-  resize: none;
+.lichkin-img {
+    vertical-align: middle;
+}
+
+.lichkin-textbox {
+    width: 100%;
+    height: 100%;
+    border: none;
+    padding: var(--lichkin-inputs-padding);
+    margin: 0px;
+    background-color: var(--lichkin-inputs-background-color);
+}
+
+.lichkin-textarea {
+    resize: none;
+    width: 100%;
+    height: 100%;
+    border: none;
+    padding: var(--lichkin-inputs-padding);
+    margin: 0px;
+    background-color: var(--lichkin-inputs-background-color);
 }
