--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/lichkin-web.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/lichkin-web.css
@@ -1,33 +1,49 @@
 @charset "UTF-8";
+
 :root {
-    --lichkin-body-background-color: #e0e0e0;
-    --lichkin-inputs-background-color: #ffffff;
-    --lichkin-inputs-padding: 3px 8px 3px 8px;
+  --lichkin-font-size: 12px;
+  --lichkin-body-background-color: #e0e0e0;
+  --lichkin-inputs-background-color: #ffffff;
+  --lichkin-inputs-padding: 3px 8px 3px 8px;
+  --lichkin-btn-padding: 7px 0px 7px 0px;
 }
 
 .lichkin-body {
-    background-color: var(--lichkin-body-background-color);
+  background-color: var(--lichkin-body-background-color);
 }
 
 .lichkin-img {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .lichkin-textbox {
-    width: 100%;
-    height: 100%;
-    border: none;
-    padding: var(--lichkin-inputs-padding);
-    margin: 0px;
-    background-color: var(--lichkin-inputs-background-color);
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: var(--lichkin-inputs-padding);
+  margin: 0px;
+  background-color: var(--lichkin-inputs-background-color);
 }
 
 .lichkin-textarea {
-    resize: none;
-    width: 100%;
-    height: 100%;
-    border: none;
-    padding: var(--lichkin-inputs-padding);
-    margin: 0px;
-    background-color: var(--lichkin-inputs-background-color);
+  resize: none;
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: var(--lichkin-inputs-padding);
+  margin: 0px;
+  background-color: var(--lichkin-inputs-background-color);
+}
+
+.lichkin-btn {
+  width: 100%;
+  padding: var(--lichkin-btn-padding);
+  margin: 0px;
+  text-align: center;
+  font-size: var(--lichkin-font-size);
+  background-color: #67a029;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #67a029;
+  border: 1px solid #548421;
 }
