--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/lichkin-app.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/lichkin-app.css
@@ -1,49 +1,66 @@
 @charset "UTF-8";
 
 :root {
+  --lichkin-body-background-color: #dddddd;
+  --lichkin-font-color: #333333;
   --lichkin-font-size: 12px;
-  --lichkin-body-background-color: #e0e0e0;
-  --lichkin-inputs-background-color: #ffffff;
+
+  /* inputs */
   --lichkin-inputs-padding: 3px 8px 3px 8px;
+  --lichkin-inputs-background-color: #ffffff;
+  --lichkin-inputs-font-color: #ffffff;
+  --lichkin-inputs-font-size: 12px;
+
+  /* btn */
   --lichkin-btn-padding: 7px 0px 7px 0px;
+  --lichkin-btn-background-color: #669933;
+  --lichkin-btn-font-color: #ffffff;
+  --lichkin-btn-font-size: 12px;
 }
 
 .lichkin-body {
   background-color: var(--lichkin-body-background-color);
 }
 
+/* img */
 .lichkin-img {
   vertical-align: middle;
 }
 
+/* inputs */
 .lichkin-textbox {
+  padding: var(--lichkin-inputs-padding);
+  background-color: var(--lichkin-inputs-background-color);
+  color: var(--lichkin-inputs-font-color);
+  font-size: var(--lichkin-inputs-font-size);
   width: 100%;
   height: 100%;
   border: none;
-  padding: var(--lichkin-inputs-padding);
   margin: 0px;
-  background-color: var(--lichkin-inputs-background-color);
 }
 
 .lichkin-textarea {
-  resize: none;
+  padding: var(--lichkin-inputs-padding);
+  background-color: var(--lichkin-inputs-background-color);
+  color: var(--lichkin-inputs-font-color);
+  font-size: var(--lichkin-inputs-font-size);
   width: 100%;
   height: 100%;
   border: none;
-  padding: var(--lichkin-inputs-padding);
   margin: 0px;
-  background-color: var(--lichkin-inputs-background-color);
+  resize: none;
 }
 
+/* btn */
 .lichkin-btn {
-  width: 100%;
   padding: var(--lichkin-btn-padding);
+  background-color: var(--lichkin-btn-background-color);
+  color: var(--lichkin-btn-font-color);
+  font-size: var(--lichkin-btn-font-size);
+  width: 100%;
+  height: 100%;
+  border: 1px solid #548421;
   margin: 0px;
   text-align: center;
-  font-size: var(--lichkin-font-size);
-  background-color: #67a029;
-  color: #ffffff;
   cursor: pointer;
-  background-color: #67a029;
-  border: 1px solid #548421;
 }
