--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/lichkin-web.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/lichkin-web.css
@@ -30,17 +30,20 @@
 
 /* icons 用于DIV标签，图标占比0.75。 */
 .lichkin-icon{background-repeat:no-repeat;text-align:center;color:#ffffff;}
-.lichkin-icon-16{background-size:16px;width:16px;height:16px;line-height:16px;}
-.lichkin-icon-32{background-size:32px;width:32px;height:32px;line-height:32px;}
-.lichkin-icon-64{background-size:64px;width:64px;height:64px;line-height:64px;}
-.lichkin-icon-128{background-size:128px;width:128px;height:128px;line-height:128px;}
 
 /* icons for fontAwesome */
-.lichkin-icon .fa, .lichkin-icon .fas{text-align:center;vertical-align:middle;color:#ffffff;}
-.lichkin-icon-16 .fa, .lichkin-icon-16 .fas{width:16px;height:16px;line-height:16px;font-size:12px;}
-.lichkin-icon-32 .fa, .lichkin-icon-32 .fas{width:32px;height:32px;line-height:32px;font-size:24px;}
-.lichkin-icon-64 .fa, .lichkin-icon-64 .fas{width:64px;height:64px;line-height:64px;font-size:48px;}
-.lichkin-icon-128 .fa, .lichkin-icon-128 .fas{width:128px;height:128px;line-height:128px;font-size:96px;}
+.lichkin-icon .fa, .lichkin-icon .fas, .lichkin-icon .far{text-align:center;vertical-align:middle;color:#ffffff;}
+
+/* text */
+.lichkin-text {
+display: inline-block;
+    vertical-align: top;
+    width: auto;
+    line-height: 22px;
+    padding: 0;color: #ffffff;
+} .lichkin-icon+.lichkin-text {
+    margin-left: 3px;
+}
 
 /* commons */
 .lichkin-body {
@@ -114,16 +117,45 @@
 
 /* btn */
 .lichkin-btn {
-  padding: var(--lichkin-btn-padding);
-  background-color: var(--lichkin-btn-background-color);
-  color: var(--lichkin-btn-font-color);
-  font-size: var(--lichkin-btn-font-size);
+  padding: var(- -lichkin-btn-padding);
+  background-color: var(- -lichkin-btn-background-color);
+  color: var(- -lichkin-btn-font-color);
+  font-size: var(- -lichkin-btn-font-size);
   width: 100%;
   height: 100%;
   border: 1px solid #548421;
   margin: 0px;
   text-align: center;
   cursor: pointer;
+}
+
+.lichkin-button {
+  text-decoration: none;
+  display: inline-block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  outline: none;
+  text-align: center;
+  vertical-align: middle;
+  height: 22px;
+  background-color: #5bc0de;
+  border: 1px solid #46b8da;
+}
+
+.lichkin-button .lichkin-button-container {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  margin: 0;
+  padding: 0px 3px;
+  vertical-align: top;
+}
+
+.lichkin-button .lichkin-button-container .lichkin-icon-16 {
+  display: inline-block;
+  margin-top: 3px;
 }
 
 /* toast */
@@ -215,7 +247,7 @@
   background-color: #ffffff;
   position: fixed;
   border-bottom: 1px solid #46b8da;
-  opacity: 0.6;
+  opacity: 0.9;
 }
 
 .lichkin-dialog-focus {
@@ -241,9 +273,7 @@
 .lichkin-dialog .lichkin-dialog-titleBar .lichkin-icon {
   float: left;
   margin-left: 6px;
-  font-size: 14px;
-  height: 20px;
-  line-height: 20px;
+  margin-top: 2px;
 }
 
 .lichkin-dialog .lichkin-dialog-titleBar .lichkin-title {
@@ -262,6 +292,10 @@
   margin-right: 6px;
 }
 
+.lichkin-dialog .lichkin-dialog-titleBar .lichkin-buttons .lichkin-icon-close {
+  background-color: #d9534f;
+}
+
 .lichkin-dialog .lichkin-dialog-contentBar {
   border-left: 1px solid #46b8da;
   border-right: 1px solid #46b8da;
@@ -271,34 +305,15 @@
   border-left: 1px solid #46b8da;
   border-right: 1px solid #46b8da;
   border-bottom: 1px solid #46b8da;
-  padding: 5px 0px;
+  padding: 5px;
   background-color: #c9e6ff;
-  position: relative;
-  height: 22px;
-  line-height: 22px;
+  text-align: right;
 }
 
 .lichkin-dialog .lichkin-dialog-buttonsBar .lichkin-button {
-  border: 1px solid #eea236;
-  position: absolute;
-  cursor: pointer;
-  width: 100px;
-  height: 20px;
-  line-height: 20px;
   background-color: #f0ad4e;
-  right: 6px;
-}
-
-.lichkin-dialog .lichkin-dialog-buttonsBar .lichkin-button .lichkin-icon {
-  position: absolute;
-  top: 2px;
-  left: 2px;
-}
-
-.lichkin-dialog .lichkin-dialog-buttonsBar .lichkin-button .lichkin-text {
-  left: 20px;
-  position: absolute;
-  color: #ffffff;
+  border-color: #eea236;
+  margin-left: 5px;
 }
 
 /** tree */
