--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-text.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-text.css
@@ -4,6 +4,6 @@
   display: inline-block;
   vertical-align: middle;
   padding: 0;
-  color: #ffffff;
+  color: var(--lichkin-plugin-font-color);
   padding: 3px 6px;
 }
