--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
@@ -52,8 +52,7 @@ TABLE.lichkin-table .lichkin-table .lichkin-table-row .lichkin-table-cell:last-c
 
 /** loading */
 @keyframes loadingAnimate {50%{-ms-transform:scaleY(0);-webkit-transform:scaleY(0);transform:scaleY(0);}}
-.lichkin-loading, .lichkin-dialog-mask {padding:0px;background-color:rgba(202, 202, 202, 0.66);width:100%;height:100%;border:none;margin:0px;position:fixed;z-index:99999;top:0px;display:none;}
-.lichkin-dialog-mask {z-index:1000;}
+.lichkin-loading {padding:0px;background-color:rgba(202, 202, 202, 0.66);width:100%;height:100%;border:none;margin:0px;position:fixed;z-index:99999;top:0px;display:none;}
 .lichkin-loading .center {padding:0px;width:100%;height:100%;border:none;margin:0px;position:relative;}
 .lichkin-loading .center .container {padding:0px;width:112px;height:50px;border:none;margin:-25px 0px 0px -56px;left:50%;top:50%;position:absolute;}
 .lichkin-loading .center .container .object {background-color:#88bb66;width:8px;height:50px;border:none;margin:0px 5px 0px 0px;-webkit-animation:animate 1s infinite;animation:animate 1s infinite;float:left;}
